--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/preeve9534/signalk-alarm#readme",
   "dependencies": {
+    "baconjs": "^1.0.1",
     "sprintf-js": "^1.1.2"
   },
   "directories": {
