--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "keywords": [
     "signalk-node-server-plugin",
     "signalk-plugin-configurator",
+    "signalk-webapp",
     "signalk-category-utility"
   ],
   "author": "Paul Reeve <preeve@pdjr.eu>",
