--- a/package.json
+++ b/package.json
@@ -31,28 +31,27 @@
   },
   "homepage": "https://github.com/pdjr-signalk/pdjr-skplugin-alarm-manager#readme",
   "dependencies": {
-    "babel-loader": "^9.1.3",
-    "d3": "^7.8.5",
-    "react-collapsible": "^2.10.0",
-    "react-hook-form": "^7.45.4",
-    "sprintf-js": "^1.1.2",
-    "webpack": "^5.88.2"
+    "sprintf-js": "^1.1.2"
   },
   "directories": {
     "lib": "lib"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "babel-loader": "^9.1.3",
     "bootstrap": "^4.6.2",
     "font-awesome": "^4.7.0",
     "react": "^16.14.0",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^7.45.4",
     "react-redux": "^5.1.2",
     "react-select": "^3.2.0",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0",
     "simple-line-icons": "^2.5.5",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
 }
