--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/pdjr-signalk/pdjr-skplugin-alarm-manager#readme",
   "dependencies": {
+    "lodash": "^4.17.21",
     "sprintf-js": "^1.1.2"
   },
   "directories": {
