--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   "homepage": "https://github.com/pdjr-signalk/pdjr-skplugin-alarm-manager#readme",
   "dependencies": {
     "lodash": "^4.17.21",
-    "sprintf-js": "^1.1.2",
-    "web-push": "^3.6.6"
+    "sprintf-js": "^1.1.2"
   },
   "directories": {
     "lib": "lib"
