--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "signalk-libdelta": "github:pdjr-signalk/signalk-libdelta"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.2",
     "typescript": "^5.7.2"
   }
